[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Menus/Console-Pc/Console_Player_Select.gd" type="Script" id=1]
[ext_resource path="res://Menus/Console-PC/Console_Map_Select.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/Console-PC/Console_Bottom_HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/Grids/menu_4x2_01.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Menu/Menu-4x2-player.png" type="Texture" id=5]

[node name="Pawn_Select_Screen" type="MarginContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
map_screen = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1912.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
_sections_unfolded = [ "Size Flags" ]

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 144.0
margin_right = 1912.0
margin_bottom = 844.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 954.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 958.0
margin_right = 1912.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 848.0
margin_right = 1912.0
margin_bottom = 953.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
_sections_unfolded = [ "Size Flags" ]

[node name="Console_Bottom_HUD" parent="VBoxContainer" index="3" instance=ExtResource( 3 )]

margin_top = 957.0
margin_bottom = 1080.0

[node name="Menu_4x2_01" parent="." index="1" instance=ExtResource( 4 )]

visible = false
position = Vector2( 965, 512 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Menu_4x2_02" parent="." index="2" instance=ExtResource( 4 )]

visible = false
position = Vector2( 965, 512 )
_sections_unfolded = [ "Transform", "Visibility" ]
player = 2

[node name="Menu_4x2_03" parent="." index="3" instance=ExtResource( 4 )]

visible = false
position = Vector2( 965, 512 )
_sections_unfolded = [ "Transform", "Visibility" ]
player = 3

[node name="Menu_4x2_04" parent="." index="4" instance=ExtResource( 4 )]

visible = false
position = Vector2( 965, 512 )
_sections_unfolded = [ "Transform", "Visibility" ]
player = 4

[node name="Menu_4x2_05" parent="." index="5" instance=ExtResource( 4 )]

visible = false
position = Vector2( 965, 512 )
_sections_unfolded = [ "Transform", "Visibility" ]
player = 5

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Sprite" type="Sprite" parent="." index="7"]

position = Vector2( 965, 512 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


